! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area
! Ticket #4938, Fix resetting the settings from the "Options" dialog: some settings were (randomly) not
  restored to their default value
! Ticket #4954, Open dialog: Support quoted paths
! Ticket #4956, Improve Play/Pause mouse click responsiveness
! Ticket #4957/#4982, Do not adjust window width in audio mode if no cover-art/logo is loaded or its size
  is limited to zero
! Ticket #4971, Bring back "Play next file in the folder" event in single time events menu
! Ticket #4975, Unrelated images could be loaded as cover-art when no author information was available
  in the audio file
! Ticket #4991, Text subtitles: "opaque box" outlines were scaled twice
! Ticket #4992, DVB: Enabling the "Information" panel using the "Info" button on the "Navigation" dialog
  would reduce the size of the main window when hiding the panel from the "View" menu
! Ticket #4993, DVB: The content of the "Information" panel was lost when changing the UI language
! Ticket #4994, The "Channels" sub-menu was not translated
! Ticket #4995, Some context menus weren't properly positioned when opened by App key
! Ticket #5010, Text subtitles: Fix a crash in case of memory allocation failure
! Ticket #5055, True/False strings were not translated in value column on advanced page
! Ticket #5067, Fix RealText subtitle parsing: the parser did not work at all and could even crash
! Ticket #5127, Improve the behavior of MPC-HC when doing the MediaInfo analysis when playing from
  an optical drive. Playback will now be paused during the analysis to avoid concurrent accesses to
  the disk that might hang playback
! Ticket #5130, Lock the player when the scan dialog is opened. Double-clicking on a media file will
  always open a new instance of MPC-HC in this case. This avoids interrupting the scan accidentally
  and fixes the issues which used to arise when doing that